<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="visitor">Visitor</string>
    <string name="host">Host</string>
    <string name="what">What type of User are you?</string>
    <string name="title_activity_host_menu">HostMenu</string>
    <string name="change">Change Preferences</string>
    <string name="find">Find Hosts</string>
    <string name="viewM">View Matches</string>
    <string name="etc">Host</string>
    <string name="title_activity_visitor_menu">VisitorMenu</string>
    <string name="title_activity_host_pref">HostPref</string>
    <string name="name">Full Name</string>
    <string name="mailAddress">Mailing Address</string>
    <string name="emailAddress">Email </string>
    <string name="blurb">A little about yourself</string>
    <string name="hblurb">About me</string>
    <string name="phone">Phone Number</string>
    <string name="smokingPref">Prefer Not Smoking</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="birds">Birds</string>
    <string name="other">Other</string>
    <string name="othera">Other Animals</string>
    <string name="allergies">allergies</string>
    <string name="register">Register</string>
    <string name="pets">Pets</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="distance">Distance from UC Davis in miles</string>
    <string name="title_activity_visitor_pref">VisitorPref</string>
    <string name="title_activity_visitor_menu2">VisitorMenu2</string>
    <string name="man">Manual Selection</string>
    <string name="smoke">Smoking</string>
    <string name="empty"></string>
    <string name="wiz">Placement Wizard</string>
    <string name="title_activity_wizard">Wizard</string>
    <string name="explain">Rate importance of similarity in preferences from 1 (not important) to 5 (absolutely necessary)</string>
    <string name="title_host_list">Hosts</string>
    <string name="title_host_detail">Host Detail</string>

</resources>