<?xml version="1.0" encoding="utf-8"?> 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" > 
  <LinearLayout 
      
      
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
      
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" /> 
  
    <EditText
        android:id="@+id/prefEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" > 
  
        <requestFocus /> 
    </EditText> 
  
    <TextView
        android:id="@+id/TextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textAppearance="?android:attr/textAppearanceMedium" /> 
  
    <EditText
        android:id="@+id/prefPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" /> 
  
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" /> 
  
    <EditText
        android:id="@+id/prefName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" /> 
  
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" /> 
  
    <EditText
        android:id="@+id/prefAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" /> 
  
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textAppearance="?android:attr/textAppearanceMedium" /> 
  
    <EditText
        android:id="@+id/prefPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <CheckBox
        android:id="@+id/prefSmoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smokingPref" />

    <TextView
        android:id="@+id/pets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pets"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/dogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dogs" />

    <CheckBox
        android:id="@+id/cats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cats" />

    <CheckBox
        android:id="@+id/birds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birds" />

    <CheckBox
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other" />

    <TextView
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/prefDist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <DatePicker
        android:id="@+id/prefStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <DatePicker
        android:id="@+id/prefEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/prefBlurb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/blurb"
        android:inputType="textMultiLine" />
  
    <Button
        android:id="@+id/prefReg"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register" /> 
        </LinearLayout>
  
</ScrollView> 