<?xml version="1.0" encoding="utf-8"?> 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" > 
  <LinearLayout 
      
      
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/explain"
          android:textAppearance="?android:attr/textAppearanceLarge" />
      <TextView
          android:id="@+id/textView33"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/empty"
          android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/start"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <RatingBar
          android:id="@+id/startbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/end"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <RatingBar
          android:id="@+id/endbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      
      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/smoke"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <RatingBar
          android:id="@+id/smokebar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      
      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dogs"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <RatingBar
          android:id="@+id/dogbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cats"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <RatingBar
          android:id="@+id/catbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

      <TextView
          android:id="@+id/textView64"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/birds"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <RatingBar
          android:id="@+id/birdbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      
            <TextView
          android:id="@+id/textView62"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/othera"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <RatingBar
          android:id="@+id/otherbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      
  
    <Button
        android:id="@+id/prefReg"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register" /> 
        </LinearLayout>
  
</ScrollView> 